--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "clase-30",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +14,10 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-mysql-session": "^2.1.8",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
-    "helpers": "0.0.6",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.7.7"
-  },
-  "devDependencies": {},
-  "description": ""
+    "nodemailer": "^6.7.5"
+  }
 }
